--- a/examples/browser.html
+++ b/examples/browser.html
@@ -8,6 +8,10 @@
 <script src="../node_modules/underscore/underscore.js"></script>
 <script src="../node_modules/d3-selection/build/d3-selection.js"></script>
 <script src="../node_modules/d3-dispatch/build/d3-dispatch.js"></script>
+<script src="../node_modules/d3-collection/build/d3-collection.js"></script>
+<script src="../node_modules/d3-dispatch/build/d3-dispatch.js"></script>
+<script src="../node_modules/d3-dsv/build/d3-dsv.js"></script>
+<script src="../node_modules/d3-request/build/d3-request.js"></script>
 <script src="../dist/d3-utils.js"></script>
 <script>
 
